--- a/AppointmentScheduler/AppointmentScheduler.csproj
+++ b/AppointmentScheduler/AppointmentScheduler.csproj
@@ -100,6 +100,8 @@
       <DependentUpon>CustomerView.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\Data.cs" />
+    <Compile Include="DateTimeExtension.cs" />
+    <Compile Include="DrawingControls.cs" />
     <Compile Include="LoginView.cs">
       <SubType>Form</SubType>
     </Compile>
